Add recipe page and link on index page for it
- New html file for recipe page within a new directory (recipes)

- Boilerplate for recipe file and h1 element

- Link on index page that leads to recipe page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/hot_spinach_artichoke_dip.html"
+      >Hot Spinach Artichoke Dip</a
+    >
   </body>
 </html>
