Add cocktail meatballs html file in recipes dir
- Structure is same as spinach artichoke html file

- No nested lists in ingredients section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/hot_spinach_artichoke_dip.html"
-      >Hot Spinach Artichoke Dip</a
-    >
+    <ul>
+      <li>
+        <a href="./recipes/hot_spinach_artichoke_dip.html"
+          >Hot Spinach Artichoke Dip</a
+        >
+      </li>
+      <li>
+        <a href="./recipes/cocktail-meatballs.html">Cocktail Meatballs</a>
+      </li>
+      <li></li>
+    </ul>
   </body>
 </html>
