--- a/recipes/hot_spinach_artichoke_dip.html
+++ b/recipes/hot_spinach_artichoke_dip.html
@@ -8,7 +8,7 @@
     <h1>Hot Spinach Artichoke Dip</h1>
     <img
       src="../images/hot_spinach_artichoke_dip_image.png"
-      alt="Image of hot spinach artichoke dip"
+      alt="Image of Hot Spinach Artichoke Dip"
       width="400"
       height="300"
     />
