--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>
         <a href="./recipes/cocktail-meatballs.html">Cocktail Meatballs</a>
       </li>
-      <li></li>
+      <li><a href="./recipes/brownies.html">Brownies</a></li>
     </ul>
   </body>
 </html>
