Add css file for recipes files
- Update classes in recipes html files

- Align center main heading and image

- Adjust typograpghy a bit

- Add different background color to every html file

--- a/recipes/hot_spinach_artichoke_dip.html
+++ b/recipes/hot_spinach_artichoke_dip.html
@@ -3,80 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hot Spinach Artichoke Dip</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
-    <h1>Hot Spinach Artichoke Dip</h1>
-    <img
-      src="../images/hot_spinach_artichoke_dip_image.png"
-      alt="Image of Hot Spinach Artichoke Dip"
-      width="400"
-      height="300"
-    />
-    <h2>About the meal</h2>
-    <p>
-      This spinach artichoke dip is delicious. It's so cheesy and fragrant. If
-      you don't like artichokes, don't worry — you'll never know they're in
-      there! My only question is: Is it okay to eat it with a spoon right out of
-      the dish?
-    </p>
-    <p>
-      Spinach artichoke dip is the best (and most delicious) way to get any
-      party started. This crowd-pleasing spinach artichoke dip recipe is sure to
-      be a hit with your friends and family.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>
-        <strong>Cream cheese</strong>: 1 (8 ounce / 225 grams) package cream
-        cheese, softened
-      </li>
-      <li><strong>Mayonnaise</strong>: ¼ cup mayonnaise</li>
-      <li>
-        <strong>Cheeses</strong>:
-        <ul>
-          <li>¼ cup grated(25 grams) Parmesan cheese</li>
-          <li>¼ cup grated(25 grams) Romano cheese</li>
-          <li>¼ cup(25 grams) shredded mozzarella cheese</li>
-        </ul>
-      </li>
-      <li><strong>Garlic</strong>: 1 clove garlic, peeled and minced</li>
-      <li>
-        <strong>Spices and seadonings</strong>:
-        <ul>
-          <li>½ teaspoon dried basil</li>
-          <li>¼ teaspoon garlic salt</li>
-          <li>salt and pepper to taste</li>
-        </ul>
-      </li>
-      <li>
-        <strong>Artichoke hearts</strong>: 1 (14 ounce / 395 grams) can
-        artichoke hearts, drained and chopped
-      </li>
-      <li>
-        <strong>Spinach</strong>: ½ (78 grams) cup frozen chopped spinach,
-        thawed and drained
-      </li>
-    </ul>
-    <h3>Directions</h3>
-    <p>Step by step directions:</p>
-    <ol>
-      <li>
-        Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
-        C). Lightly grease a small baking dish.
-      </li>
-      <li>
-        Mix cream cheese, mayonnaise, Parmesan cheese, Romano cheese, garlic,
-        basil, garlic salt, salt, salt, and pepper together in medium bowl.
-      </li>
-      <li>Gently stir in artichoke hearts and spinach.</li>
-      <li>
-        Transfer the mixture to the prepared baking dish; top with mozzarella
-        cheese.
-      </li>
-      <li>
-        Bake in the preheated oven until bubbly and lightly browned, about 25
-        minutes.
-      </li>
-    </ol>
+  <body class="artichoke">
+    <div>
+      <h1 class="main-heading">Hot Spinach Artichoke Dip</h1>
+      <img
+        src="../images/hot_spinach_artichoke_dip_image.png"
+        alt="Image of Hot Spinach Artichoke Dip"
+        width="500"
+        height="auto"
+      />
+      <h2>About the meal</h2>
+      <p>
+        This spinach artichoke dip is delicious. It's so cheesy and fragrant. If
+        you don't like artichokes, don't worry — you'll never know they're in
+        there! My only question is: Is it okay to eat it with a spoon right out
+        of the dish?
+      </p>
+      <p>
+        Spinach artichoke dip is the best (and most delicious) way to get any
+        party started. This crowd-pleasing spinach artichoke dip recipe is sure
+        to be a hit with your friends and family.
+      </p>
+      <h3>Ingredients</h3>
+      <ul>
+        <li>
+          <strong>Cream cheese</strong>: 1 (8 ounce / 225 grams) package cream
+          cheese, softened
+        </li>
+        <li><strong>Mayonnaise</strong>: ¼ cup mayonnaise</li>
+        <li>
+          <strong>Cheeses</strong>:
+          <ul>
+            <li>¼ cup grated(25 grams) Parmesan cheese</li>
+            <li>¼ cup grated(25 grams) Romano cheese</li>
+            <li>¼ cup(25 grams) shredded mozzarella cheese</li>
+          </ul>
+        </li>
+        <li><strong>Garlic</strong>: 1 clove garlic, peeled and minced</li>
+        <li>
+          <strong>Spices and seadonings</strong>:
+          <ul>
+            <li>½ teaspoon dried basil</li>
+            <li>¼ teaspoon garlic salt</li>
+            <li>salt and pepper to taste</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Artichoke hearts</strong>: 1 (14 ounce / 395 grams) can
+          artichoke hearts, drained and chopped
+        </li>
+        <li>
+          <strong>Spinach</strong>: ½ (78 grams) cup frozen chopped spinach,
+          thawed and drained
+        </li>
+      </ul>
+      <h3>Directions</h3>
+      <p>Step by step directions:</p>
+      <ol>
+        <li>
+          Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
+          C). Lightly grease a small baking dish.
+        </li>
+        <li>
+          Mix cream cheese, mayonnaise, Parmesan cheese, Romano cheese, garlic,
+          basil, garlic salt, salt, salt, and pepper together in medium bowl.
+        </li>
+        <li>Gently stir in artichoke hearts and spinach.</li>
+        <li>
+          Transfer the mixture to the prepared baking dish; top with mozzarella
+          cheese.
+        </li>
+        <li>
+          Bake in the preheated oven until bubbly and lightly browned, about 25
+          minutes.
+        </li>
+      </ol>
   </body>
 </html>
