--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Brownies</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
-    <h1>Brownies</h1>
+  <body class="brownies">
+    <h1 class="main-heading">Brownies</h1>
     <img
       src="../images/brownies_image.png"
       alt="Image of Brownies"
-      width="400"
-      height="300"
+      width="500"
+      height="auto"
     />
     <h2>About the meal</h2>
     <p>
