--- a/recipes/cocktail-meatballs.html
+++ b/recipes/cocktail-meatballs.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Cocktail Meatballs</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <h1>Cocktail Meatballs</h1>
+    <h1 class="main-heading">Cocktail Meatballs</h1>
     <img
       src="../images/cocktail_meatballs_image.png"
       alt="Image of Cocktail Meatballs"
-      width="400"
-      height="300"
+      width="500"
+      height="auto"
     />
     <h2>About the meal</h2>
     <p>
