Update mostly styles and little tweaks to html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li>
-        <a href="./recipes/hot_spinach_artichoke_dip.html"
+  <body class="index-body">
+    <h1 class="main-heading">Odin Recipes</h1>
+    <ul class="articles">
+      <li class="article">
+        <a
+          class="artichoke-link"
+          href="./recipes/hot_spinach_artichoke_dip.html"
           >Hot Spinach Artichoke Dip</a
         >
       </li>
-      <li>
-        <a href="./recipes/cocktail-meatballs.html">Cocktail Meatballs</a>
+      <li class="article">
+        <a class="meatballs-link" href="./recipes/cocktail-meatballs.html"
+          >Cocktail Meatballs</a
+        >
       </li>
-      <li><a href="./recipes/brownies.html">Brownies</a></li>
+      <li class="article">
+        <a class="brownies-link" href="./recipes/brownies.html">Brownies</a>
+      </li>
     </ul>
   </body>
 </html>
