--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -14,14 +14,13 @@
       width="500"
       height="auto"
     />
-    <h2>About the meal</h2>
-    <p>
+    <p class="about">
       This brownie recipe makes rich, fudgy brownies that always turn out well.
       They're topped with homemade chocolate frosting to make the best brownies
       ever!
     </p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="sub-heading">Ingredients</h3>
+    <ul class="ingredients">
       <li>½ cup (115 grams) butter</li>
       <li>1 cup (200 grams) white sugar</li>
       <li>2 eggs</li>
@@ -32,15 +31,16 @@
       <li>¼ teaspoon baking powder</li>
     </ul>
     <h4>Frosting:</h4>
-    <ul>
+    <ul class="ingredients">
       <li>3 tablespoons butter, softened</li>
       <li>3 tablespoons unsweetened cocoa powder</li>
       <li>1 tablespoon honey</li>
       <li>1 teaspoon vanilla extract</li>
       <li>1 cup (125 grams) confectioners' sugar</li>
     </ul>
-    <h3>Directions</h3>
-    <ol>
+    <h3 class="sub-heading">Directions</h3>
+    <p>Step by step directions:</p>
+    <ol class="directions">
       <li>
         Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an
         8-inch (20cm) square pan.
