--- a/recipes/cocktail-meatballs.html
+++ b/recipes/cocktail-meatballs.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
+  <body class="meatballs">
     <h1 class="main-heading">Cocktail Meatballs</h1>
     <img
       src="../images/cocktail_meatballs_image.png"
@@ -14,15 +14,14 @@
       width="500"
       height="auto"
     />
-    <h2>About the meal</h2>
-    <p>
+    <p class="about">
       These tasty cocktail meatballs will disappear quickly at your holiday
       party. My mom makes them every year for New Year's Eve, and so do I. These
       do very well in a slow cooker, as you can simmer them before serving and
       keep them hot for the duration of your party.
     </p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="sub-heading">Ingredients</h3>
+    <ul class="ingredients">
       <li>1 pound (500 grams) lean ground beef</li>
       <li>½ cup (75 grams) bread crumbs</li>
       <li>3 tablespoons minced onion</li>
@@ -33,9 +32,9 @@
       <li>1 tablespoon brown sugar</li>
       <li>1 ½ teaspoons lemon juice</li>
     </ul>
-    <h3>Directions</h3>
+    <h3 class="sub-heading">Directions</h3>
     <p>Step by step directions:</p>
-    <ol>
+    <ol class="directions">
       <li>
         Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees
         C).
