--- a/recipes/hot_spinach_artichoke_dip.html
+++ b/recipes/hot_spinach_artichoke_dip.html
@@ -15,20 +15,14 @@
         width="500"
         height="auto"
       />
-      <h2>About the meal</h2>
-      <p>
+      <p class="about">
         This spinach artichoke dip is delicious. It's so cheesy and fragrant. If
         you don't like artichokes, don't worry — you'll never know they're in
         there! My only question is: Is it okay to eat it with a spoon right out
         of the dish?
       </p>
-      <p>
-        Spinach artichoke dip is the best (and most delicious) way to get any
-        party started. This crowd-pleasing spinach artichoke dip recipe is sure
-        to be a hit with your friends and family.
-      </p>
-      <h3>Ingredients</h3>
-      <ul>
+      <h3 class="sub-heading">Ingredients</h3>
+      <ul class="ingredients">
         <li>
           <strong>Cream cheese</strong>: 1 (8 ounce / 225 grams) package cream
           cheese, softened
@@ -60,9 +54,9 @@
           thawed and drained
         </li>
       </ul>
-      <h3>Directions</h3>
+      <h3 class="sub-heading">Directions</h3>
       <p>Step by step directions:</p>
-      <ol>
+      <ol class="directions">
         <li>
           Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
           C). Lightly grease a small baking dish.
